Added TODOs and small changes

--- a/latex/sections/frontpage.tex
+++ b/latex/sections/frontpage.tex
@@ -13,7 +13,7 @@
 
 % Title
 \HRule \\[0.9cm]
-{ \Huge \bfseries P2 preliminary title }\\[0.4cm]
+{ \Huge \bfseries Unknown terrain mapping and navigation }\\[0.4cm]
 
 \HRule \\[0.5cm]
 
@@ -25,7 +25,6 @@
 Antal János Monori\\
 Emil Már Einarsson\\
 Gustavo Smidth Buschle\\
-Michal Damian Budzinski\\
 Thomas Thuesen Enevoldsen
 \end{flushleft}
 \end{minipage}
