--- a/latex/sections/preface.tex
+++ b/latex/sections/preface.tex
@@ -1,6 +1,7 @@
 \chapter*{Preface\markboth{Preface}{Preface}}\label{ch:preface}
 \addcontentsline{toc}{chapter}{Preface}
-P2 project
+
+%TODO: P2 project preface
 
 From hereby on, every mention of 'we' refers to the five co-authors listed below.
 
@@ -33,17 +34,7 @@ From hereby on, every mention of 'we' refers to the five co-authors listed below
 \begin{minipage}[b]{0.45\textwidth}
 	\centering
 	\rule{\textwidth}{0.5pt}\\
-	Michal Damian Budzinski\\
-	{\footnotesize <mbudzi14@student.aau.dk>}
-\end{minipage}
-\vspace*{3\baselineskip}
-
-\vspace{5mm}\noindent 
-\begin{center}
-\begin{minipage}[b]{0.45\textwidth}
-	\centering
-	\rule{\textwidth}{0.5pt}\\
 	Thomas Thuesen Enevoldsen\\
 	{\footnotesize <tten14@student.aau.dk>}
 \end{minipage}
-\end{center}
+\vspace*{3\baselineskip}
