--- a/latex/sections/titlepage.tex
+++ b/latex/sections/titlepage.tex
@@ -1,7 +1,7 @@
 \pdfbookmark[0]{English title page}{label:titlepage_en}
 \aautitlepage{%
   \englishprojectinfo{
-    P2 preliminary title
+    Unknown terrain mapping and navigation
   }{%
     Scientific Theme %theme
   }{%
@@ -13,7 +13,6 @@
 	Antal János Monori\\
 	Emil Már Einarsson\\
 	Gustavo Smidth Buschle\\
-	Michal Damian Budzinski\\
 	Thomas Thuesen Enevoldsen
   }{%
     %list of supervisors
@@ -30,5 +29,5 @@
   DK-6700 Esbjerg\\
   \href{http://sict.aau.dk}{http://sict.aau.dk}
 }{% the abstract
-	Abstract
+	%TODO: Add abstract here
 }
