gitignore still doesn't work. :(

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -27,6 +27,8 @@
 
 \input{sections/ch1-intro_Emil.tex}
 
+\input{sections/ch1-intro_Thomas.tex}
+
 \input{sections/ch1-initiatingproblem.tex}
 
 %Chapter 2  ------------
