--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -1,1 +1,8 @@
-%TODO: Anthony will add some text here tomorrow. Anthony promise :-).
+%initial blablabla
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[scale=.7]{images/wdiagram1.pdf}
+	\caption{W-diagram}
+	\label{fig:wdiagram}
+\end{figure}
