--- a/report/sections/ch1-intro_Emil.tex
+++ b/report/sections/ch1-intro_Emil.tex
@@ -1,3 +1,11 @@
+Why should we solve this problem? Why is this a problem?
+
+Exploration of unknown planetary terrain will be heavily needed in the future in the search for other lifeforms, by creating a device that remotely can map and record data about the terrain, the terrain can be analysed before an expedition is started. This will save a lot of money and also rule out some unknown areas without the need for an entire expedition.
+
+Unknown terrain is an issue, since there are possibilities for GPS. This makes it hard for regular exploration vehicles to map and explore the area, since it's impossible for the vehicle to efficiently create a reference point.
+
+Unknown terrain is also an issue when it comes to manned expeditions, since there are no maps or data recordings from the
+
 %GPS links
 
 % http://en.wikipedia.org/wiki/Global_Positioning_System
