--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -1,1 +1,9 @@
-Intro problem analysis
+%TODO: Intro problem analysis here
+
+%TODO: Fix the figure, so it does not go into the next subsection
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=.7]{images/wdiagram1.pdf}
+	\caption{W-diagram}
+	\label{fig:wdiagram}
+\end{figure}
