--- a/report/sections/ch2-intro_Emil.tex
+++ b/report/sections/ch2-intro_Emil.tex
@@ -1,4 +1,4 @@
-Why should we solve this problem? Why is this a problem?
+\subsection{Why should we solve this problem? Why is this a problem?}
 
 Exploration of unknown planetary terrain will be heavily needed in the future in the search for other lifeforms, by creating a device that remotely can map and record data about the terrain, the terrain can be analysed before an expedition is started. This will save a lot of money and also rule out some unknown areas without the need for an entire expedition.
 
