--- a/report/sections/ch2-intro_Thomas.tex
+++ b/report/sections/ch2-intro_Thomas.tex
@@ -1,35 +1,19 @@
 \subsection{How does this problem occur?}
-%This list is purely for personal reference - Thomas
-\begin{itemize}
-	\item The need for exploration and expansion
-	\item Technological advancements
-	\item Curiosity
-\end{itemize}
 
-Exploration of unknown terrain and environments has been practised for many years. It originates from the human curiosity and the spirit to explore and gather information about the surroundings. %Should we talk about previous explorations? Figuring out that the earth wasn't flat etc.?
+Exploration of unknown terrain and environments has been practised for many years. It originates from the human curiosity and the spirit to explore and gather information about the surroundings.
 
-When dealing with unknown environments, unknown does not strictly refer to the environment itself but the persons state of knowledge about the physics and composition of the given environment. In a known environment, outcomes from every action can more or less be calculated or estimated. Where as in an unknown environment, it is a matter of investigation and figuring out what works and what does not. In the unknown environment it is important to gain knowledge of how everything work, so that in the future it possible for an individual make the best possible choice and decisions in the environment.
-%http://51lica.com/wp-content/uploads/2012/05/Artificial-Intelligence-A-Modern-Approach-3rd-Edition.pdf (page 44, section 2.3.2 Properties of task environments)
-
+When dealing with unknown environments, unknown does not strictly refer to the environment itself but the persons state of knowledge about the physics and composition of the given environment. In a known environment, outcomes from every action can more or less be calculated or estimated. Where as in an unknown environment, it is a matter of investigation and figuring out what works and what does not. In the unknown environment it is important to gain knowledge of how everything work, so that in the future it possible for an individual make the best possible choice and decisions in the environment.\cite{aiint}
 Even though most of the land has been explored and is being used for its vast amount of resources, the time will come where planetary and ocean exploration becomes a key factor for our technological advancements and our resources. Ocean exploration is important because it provides data from deep-sea areas, which in turn will reduce the amount of unknown environments left on our planet.
-Gathering data and intelligence from the ocean also helps with managing the resources that are available in the deep-sea areas, so that future generations can benefit from them. The ocean also provides information about future environmental conditions and can help predict earthquakes and tsunamis. Investigating the deep-sea also reveals new ecosystems and possible sources for medication, food and energy, which are all vital for scientific advancements. 
-%http://oceanexplorer.noaa.gov/backmatter/whatisexploration.html
+Gathering data and intelligence from the ocean also helps with managing the resources that are available in the deep-sea areas, so that future generations can benefit from them. The ocean also provides information about future environmental conditions and can help predict earthquakes and tsunamis. Investigating the deep-sea also reveals new ecosystems and possible sources for medication, food and energy, which are all vital for scientific advancements.\cite{oceanexplo}
 
 Humans have always had never-ending interest and need to push science and technology to its limits, and then desire to achieve something even further than what is possible.  The many challenges humans have faced has led to many benefits for our society almost since its creation. Space exploration helps further our understanding about the history of our universe and solar system. %maybe elaborate a bit here 
-%http://www.nasa.gov/exploration/whyweexplore/why_we_explore_main.html
+\cite{whyweexplo}
 
 \subsection{Who is affected by this problem?}
-%This list is purely for personal reference - Thomas
-\begin{itemize}
-	\item Humanity (according to torben it's too far of a stretch)
-	\item -- Some resources will be necessary in the future
-	\item -- Expansion into space (Because of lack of space)
-	\item Science and Scientists
-	\item -- The never-ending quest for knowledge and information
-	\item -- Technological advancements
-\end{itemize}
 
-Unknown terrain and environments pose a big issue for scientists and engineers who want to explore these areas. Designing vehicles and devices for deep-sea ocean or planetary exploration is impossible, without any background information on what environmental factors they will be dealing with. Exploration is essential when in the future when new resources are needed for scientific and technological advancements.
+Unknown terrain and environments pose a big issue for scientists and engineers who want to explore these areas. Designing vehicles and devices for the deep-sea ocean or planetary exploration is impossible, without any background information on what environmental factors they will be dealing with or encountering. Exploration is essential when in the future new resources are needed for scientific and technological advancements, that currently our of reach.
 
-Scientists are hindered by society because its becoming too focused on risks. Only 5 percent of the ocean has has been explored, being concerned about taking risks is what will put the future development in jeopardy. 
-%http://www.nasa.gov/missions/solarsystem/Why_We_02.html 
+%Was considering writing about how student will be left out of possible knowledge but it seems hella weak
+In the long run humans in general will be affected by the lack of exploration. Alternative resources and habitable areas for expansion will be necessary in the future, when earth's natural resource deposits become depleted and there are less habitable places. 
+
+Scientists are heavily hindered by society, because it is becoming too focused on risks. Only 5 percent of the ocean has has been explored, this leaves a large amount of areas untouched and mapped. Being concerned about taking risks is what will put the future development and science in jeopardy.\cite{risksandexplo} 
