--- a/report/sections/ch1-initiatingproblem.tex
+++ b/report/sections/ch1-initiatingproblem.tex
@@ -1,2 +1,2 @@
 \section{Initiating Problem}
-Mapping in the Absence of external Technology
+How to map unknown terrains in the absence of external technology, like GPS?
