--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -1,6 +1,5 @@
-%TODO: Intro problem analysis here
+Since the beginning of time, early human settlements were eager to explore their environment and surroundings. It did not take long, until the first humans started getting even further and become explorers. They started leaving marks and using landmarks to remember pathways and places. This primitive representation of prehistoric places and early history maps can be traced back to 24000-25000 BC\cite{cavedrawings}. Soon after, they started using maps which revolutionized the way we navigate and the way we travel, and therefore the field of Cartography become a reality. During the 19th century terra incognita disappeared from maps, since both the coastlines and the inner parts of the continents had been fully explored. Today, using technology and satellites, Earth is completely mapped, yet still not completely explored. Around 95 percent of our oceans are still remain unexplored, considering that they take up 70 percent of the planet's surface\cite{oceandepth}. This is mostly due to extreme conditions and high depths, that humans can not be put up against. As technology advanced and matured, remotely operated underwater vehicles (ROVs) become a popular way of exploring the depths of our oceans, due to their accessibility to places where humans could not possible go before for a long period of time. In the meantime, interplanetary exploration took off during the mid-20th century with the start of the Cold War between the United States of America and the Soviet Union. This led to many great achievements, like the first successful interplanetary encounter, where the US Mariner 2 fly-by Venus\cite{firstflyby} or when the Soviet Venera 3 made first impact on the surface of Venus\cite{firstimpact}. The last successful program to date was the Mars rover CURIOSITY, which landed and still making progress in exploring and sending back scientific measures of the planet Mars. Exploring planets for future-settlements and first-contact is very important in order to quench out human curiosity but also for advancing the different fields in science and technology.
 
-%TODO: Fix the figure, so it does not go into the next subsection
 \begin{figure}[!h]
 	\centering
 	\includegraphics[scale=.7]{images/wdiagram1.pdf}
