Initial when text

--- a/report/sections/ch2-intro_Anthony.tex
+++ b/report/sections/ch2-intro_Anthony.tex
@@ -1,1 +1,2 @@
 \subsection{When is this actually a problem?}
+Mapping unknown terrains becomes a problem \textbf{when} new planets are discovered and mapping of the surface and it's atmosphere is required for further exploration. 
