--- a/report/citations.bib
+++ b/report/citations.bib
@@ -1,10 +1,43 @@
 %-----------------------------------------------------------
+%introduction
+@book{cavedrawings,
+	author="Alexander Wolodtschenko, Thomas Forner",
+	title = "Prehistoric and Early Historic Maps in Europe: Conception of Cd-Atlas",
+	year = "2007",
+	publisher = "e-Perimetron, Vol. 2, No. 2, Spring 2007 [114-116]",
+	howpublished = "\url{http://www.e-perimetron.org/Vol_2_2/Wolodchenko_Forner.pdf}"
+}
+
+@MISC{oceandepth,
+	author ={National Ocean Service},
+	title = {How much of the ocean have we explored?},
+	month = jun,
+	year = {2014},
+	howpublished = "\url{http://oceanservice.noaa.gov/facts/exploration.html}"
+}
+
+@MISC{firstflyby,
+	author = {National Aeronautics and Space Administration},
+	title = {Mariner 2},
+	month = aug,
+	year = {2014},
+	howpublished = "url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1962-041A}"
+}
+
+@MISC{firstimpact,
+	author = {National Aeronautics and Space Administration},
+	title = {Venera 3},
+	month = aug,
+	year = {2014},
+	howpublished = "url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1965-092A}"
+}
+%-----------------------------------------------------------
 %problem analysis 
 @MISC{oceanexplo,
 	author = {NOAA Ocean Explorer},
 	title = {What Is Ocean Exploration and Why Is It Important?},
 	month = jul,
-	year = {2014 	},
+	year = {2014},
 	howpublished = "\url{http://oceanexplorer.noaa.gov/backmatter/whatisexploration.html}"
 }
 
