Added Emil's references to bib file

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -1,5 +1,8 @@
 %-----------------------------------------------------------
 %introduction
+
+%-----------------------------------------------------------
+%problem analysis 
 @book{cavedrawings,
 	author="Alexander Wolodtschenko, Thomas Forner",
 	title = "Prehistoric and Early Historic Maps in Europe: Conception of Cd-Atlas",
@@ -21,7 +24,7 @@
 	title = {Mariner 2},
 	month = aug,
 	year = {2014},
-	howpublished = "url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1962-041A}"
+	howpublished = "\url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1962-041A}"
 }
 
 @MISC{firstimpact,
@@ -29,10 +32,25 @@
 	title = {Venera 3},
 	month = aug,
 	year = {2014},
-	howpublished = "url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1965-092A}"
+	howpublished = "\url{http://nssdc.gsfc.nasa.gov/nmc/spacecraftDisplay.do?id=1965-092A}"
 }
-%-----------------------------------------------------------
-%problem analysis 
+
+@MISC{gpsgeneral,
+	author = {The Library of Congress},
+	title = {What is a GPS? How does it work?},
+	month = jun,
+	year = {2011},
+	howpublished = "\url{http://www.loc.gov/rr/scitech/mysteries/global.html}"
+}
+
+@MISC{underwatergps,
+	author = {Invention from NewScientist Blogs},
+	title = {Underwater GPS},
+	month = mar,
+	year = {2007},
+	howpublished = "\url{http://www.newscientist.com/blog/invention/2007/03/underwater-gps.html}"
+}
+
 @MISC{oceanexplo,
 	author = {NOAA Ocean Explorer},
 	title = {What Is Ocean Exploration and Why Is It Important?},
