--- a/report/sections/ch2-intro_Emil.tex
+++ b/report/sections/ch2-intro_Emil.tex
@@ -4,7 +4,7 @@ The problems with navigating a robot in an unknown terrain is the lack of refere
 
 If a robot is successful with that task and we get back a detailed 3D map then the next mission can rely on that information and have a easier way to navigate. 
 
-On earth we have the GPS (global positioning system) that is an space based satellites navigation system flying over the earth [reference: http://www.loc.gov/rr/scitech/mysteries/global.html]. But putting up a system like that on another planet cost a lot of resources and the cost to start with would not be beneficial. GPS also does not penetrate water [reference: http://www.newscientist.com/blog/invention/2007/03/underwater-gps.html]. 
+On earth we have the GPS (global positioning system) that is an space based satellites navigation system flying over the earth\cite{gpsgeneral}. But putting up a system like that on another planet cost a lot of resources and the cost to start with would not be beneficial. GPS also does not penetrate water\cite{underwatergps}. 
 
 % More detailed description of GPS and reference points will the in the theory part //need to have this ?
 
