More citations added

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -51,6 +51,21 @@
 	howpublished = "\url{http://www.newscientist.com/blog/invention/2007/03/underwater-gps.html}"
 }
 
+@MISC{exoplanets,
+	author={Abel Mendez, Planetary Habitability Laboratory - University of Puerto Rico at Arecibo},
+	title = {The Potentially Habitable Universe Around Us},
+	month = dec,
+	year = {2012},
+	howpublished = "\url{http://phl.upr.edu/press-releases/thepotentiallyhabitableuniversearoundus}"
+}
+
+@MISC{esi,
+	author={Planetary Habitability Laboratory - University of Puerto Rico at Arecibo},
+	title = {http://phl.upr.edu/projects/earth-similarity-index-esi},
+	year = {2011},
+	howpublished = "\url{http://phl.upr.edu/press-releases/thepotentiallyhabitableuniversearoundus}"
+}
+
 @MISC{oceanexplo,
 	author = {NOAA Ocean Explorer},
 	title = {What Is Ocean Exploration and Why Is It Important?},
