When is done for now
Will expand later

--- a/report/sections/ch2-intro_Anthony.tex
+++ b/report/sections/ch2-intro_Anthony.tex
@@ -1,2 +1,8 @@
 \subsection{When is this actually a problem?}
-Mapping unknown terrains becomes a problem \textbf{when} new planets are discovered and mapping of the surface and it's atmosphere is required for further exploration. 
+Mapping unknown terrains becomes a problem \textbf{when} new planets are discovered and mapping of the surface and it's atmosphere is required for further exploration and investigation. Scientists use the so-called Earth Similarity Index (ESI) for mapping extrasolar planets, or exoplanets for potentially habitable places in the Universe.\cite{exoplanets}\cite{esi}. The ESI implies many factors, like surface temperature and other Earth-like properties. Another scenario, when this is a problem, is underwater exploration, where trained divers are unable to explore and map the underwater terrain due to its depth and dangerous circumstances.
+
+Besides exploration, mapping unknown terrains is often used in hostage situation and natural disasters, where people cannot enter a specific area without that being mapped upfront for various factors. One example would be the Fukushima Nuclear Plant catastrophe in Fukushima, Japan on March, 2011. After the leakage, rescue forces and scientist used autonomous drones to map the inside of the factory, which was put under quarantine for high levels or radiation.
+
+%http://www.theatlantic.com/technology/archive/2011/04/inside-the-drone-missions-to-fukushima/237981/
+
+%TODO: I'll expand this at a later point, as I have some more ideas.
