--- a/report/P2.tex
+++ b/report/P2.tex
@@ -38,6 +38,8 @@
 
 \input{sections/ch2-intro_Thomas.tex}
 
+\input{sections/ch2-theory_Thomas.tex}
+
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
