--- a/report/citations.bib
+++ b/report/citations.bib
@@ -96,3 +96,30 @@
     year      = "2010",
     publisher = "Pearson"
 }
+
+%-----------------------------------------------------------
+%theory
+
+@MISC{autonomousbasic,
+	author = {RobotWorx},
+	title = {What are autonomous robots?},
+	month = nov,
+	year = {2014},
+	howpublished = "\url{http://www.robots.com/articles/viewing/what-are-autonomous-robots}"
+}
+
+@MISC{obstacles,
+	author = {Sriram Emarose},
+	title = {How to make a simple Autonomous Vehicle},
+	month = jul,
+	year = {2013},
+	howpublished = "\url{http://letsmakerobots.com/blog/sriram-emarose/how-make-simple-autonomous-vehicle}"
+}
+
+@MISC{singleandinsect,
+	author = {Margaret Rouse},
+	title = {Robot (Insect robot, autonomous robot)},
+	month = apr,
+	year = {2007},
+	howpublished = "\url{http://whatis.techtarget.com/definition/robot-insect-robot-autonomous-robot}"
+}
