Added gustavos section to the main

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -36,6 +36,8 @@
 
 \input{sections/ch2-intro_Anthony.tex}
 
+\input{sections/ch2-intro_Gustavo}
+
 \input{sections/ch2-intro_Thomas.tex}
 
 \input{sections/ch2-theory_Thomas.tex}
