Added citation for W-diagram

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -66,6 +66,14 @@
 	howpublished = "\url{http://phl.upr.edu/press-releases/thepotentiallyhabitableuniversearoundus}"
 }
 
+@MISC{fukushima,
+	author={Alexis C. Madrigal},
+	title={Inside the Drone Missions to Fukushima},
+	month = apr,
+	year ={2011},
+	howpublished="\url{http://www.theatlantic.com/technology/archive/2011/04/inside-the-drone-missions-to-fukushima/237981/}"
+}
+
 @MISC{oceanexplo,
 	author = {NOAA Ocean Explorer},
 	title = {What Is Ocean Exploration and Why Is It Important?},
