--- a/report/P2.tex
+++ b/report/P2.tex
@@ -34,6 +34,8 @@
 
 \input{sections/ch2-intro_Emil.tex}
 
+\input{sections/ch2-theory_Emil.tex}
+
 \input{sections/ch2-intro_Anthony.tex}
 
 \input{sections/ch2-intro_Gustavo}
