How added and highlighted

--- a/report/sections/ch2-intro.tex
+++ b/report/sections/ch2-intro.tex
@@ -23,9 +23,7 @@ Other planets can be much more complicated to navigate. The consistency of they 
 
 Disaster scenarios can also be said to be unknown terrain. Disaster scenarios means that the terrain might be loose or difficult to navigate, so a drone might be best suited for it. In most cases disaster scenarios happen in locations where the vehicle can be controlled manually
 
-\subsection{How does this problem occur?}
-
-Exploration of unknown terrain and environments has been practised for many years. It originates from the human curiosity and the spirit to explore and gather information about the surroundings.
+To answer the question \textbf{how} does this problem occur, we have to look into some possible scenarious discussed above. Exploration of unknown terrain and environments has been practised for many years. It originates from the human curiosity and the spirit to explore and gather information about the surroundings.
 
 When dealing with unknown environments, unknown does not strictly refer to the environment itself but the persons state of knowledge about the physics and composition of the given environment. In a known environment, outcomes from every action can more or less be calculated or estimated. Where as in an unknown environment, it is a matter of investigation and figuring out what works and what does not. In the unknown environment it is important to gain knowledge of how everything work, so that in the future it possible for an individual make the best possible choice and decisions in the environment.\cite{aiint}
 Even though most of the land has been explored and is being used for its vast amount of resources, the time will come where planetary and ocean exploration becomes a key factor for our technological advancements and our resources. Ocean exploration is important because it provides data from deep-sea areas, which in turn will reduce the amount of unknown environments left on our planet.
