--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -1,37 +1,39 @@
-resources
-    gas giants
-        helium is important
-    earthlike
-        earthlike planets are often composed of silicate and metals.
+%resources
+%    gas giants
+%        helium is important
+%    earthlike
+%        earthlike planets are often composed of silicate and metals.
+%
+%
+%Environment
+%    atmosphere
+%        Wind speeds
+%        pressure (mercury none - venus 92a - gas giants a fuckton - http://www.compoundchem%.com/2014/07/25/planetatmospheres/)
+%
+%    terrain
+%        rocky/sandy/none
+%
+%    temperature (Solar system 500C to -250C - https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169)
+%
+%conclusion
+%    drones
+%    Tracks/wheels
+%        tracks are heavier than wheels, but better for rough terrain
 
-
-Environment
-    atmosphere
-        Wind speeds
-        pressure (mercury none - venus 92a - gas giants a fuckton - http://www.compoundchem.com/2014/07/25/planetatmospheres/)
-
-    terrain
-        rocky/sandy/none
-
-    temperature (Solar system 500C to -250C - https://solarsystem.nasa.gov/multimedia/display.cfm?IM_ID=169)
-    
-conclusion
-    drones
-    Tracks/wheels
-        tracks are heavier than wheels, but better for rough terrain
-
-
-Resources
+\subsection Resources
 For the purpose of exploration and resource gathering, planets can be split into two categories. The gassy giants, and the earthlike/rocky planets[ref?].
 There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colosize such a planet, or build anything on it for that matter. However, they(solar system) have a relatively high helium content, which is a valuable gas for research[ref?]. 
 In the other hand, earthlike planets have a larger variety of resources, and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface.
 
-Environment
-    Atmosphere
-    
 
-    Terrain
-    
+\subsection{Environment}
+\subsubsection{Atmosphere}
+There are quite a few planets with a negligible atmosphere. In these planets sound based sensors cannot work, but light based sensors might even work better.
+Planets with an atmosphere can be much harder to cope with. The biggest aspect of a planets atmosphere is the pressure at surface level.
 
-Conclusion
+\subsubsection{Terrain}
+Earthlike planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.
+
+
+\subsection{Conclusion}
 
