--- a/report/sections/ch2-theory_Emil.tex
+++ b/report/sections/ch2-theory_Emil.tex
@@ -2,7 +2,7 @@ GPS theory
 
 The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites.[1] The system provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver.
 
-In addition to GPS, other systems are in use or under development. The Russian Global Navigation Satellite System (GLONASS) was developed contemporaneously with GPS, but suffered from incomplete coverage of the globe until the mid-2000s.[4] There are also the planned European Union Galileo positioning system, India's Indian Regional Navigation Satellite System, and the Chinese Beidou Navigation Satellite System.
+In addition to GPS, other systems are in use or under development. The Russian Global Navigation Satellite System (GLONASS) was developed contemporaneously with GPS, but suffered from incomplete coverage of the globe until the mid-2000s. There are also the planned European Union Galileo positioning system, India's Indian Regional Navigation Satellite System, and the Chinese Beidou Navigation Satellite System.
 
 NEEDS MORE TEXT, CHANGE TEXT AND BIBTEX IT
 
@@ -16,7 +16,7 @@ Its applications include satellite tracking of the relative positioning alterati
 
 Photogrammetry is as old as modern photography, can be dated to the mid-nineteenth century, and its detection component has been emerging from radiolocation, multilateration and radiometry while its 3-D positioning estimative component (based on modeling) employs methods related to triangulation, trilateration and multidimensional scaling.
 
-In the simplest example, the distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by 1/s.
+In the simplest example, the distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by %1/s.
 
 Algorithms for photogrammetry typically attempt to minimize the sum of the squares of errors over the coordinates and relative displacements of the reference points. This minimization is known as bundle adjustment and is often performed using the Levenberg–Marquardt algorithm.
 
@@ -24,11 +24,11 @@ NEEDS MORE TEXT, CHANGE TEXT AND BIBTEX IT
 
 Stereophotogrammetry
 
-Stereoscopy (also called stereoscopics or 3D imaging) is a technique for creating or enhancing the illusion of depth in an image by means of stereopsis for binocular vision. The word stereoscopy derives from Greek στερεός (stereos), meaning "firm, solid", and σκοπέω (skopeō), meaning "to look, to see".[2][3] Any stereoscopic image is called stereogram. Originally, stereogram referred to a pair of stereo images which could be viewed using a stereoscope.
+Stereoscopy (also called stereoscopics or 3D imaging) is a technique for creating or enhancing the illusion of depth in an image by means of stereopsis for binocular vision. The word stereoscopy derives from Greek (stereos), meaning "firm, solid", and FIX HERE, meaning "to look, to see". Any stereoscopic image is called stereogram. Originally, stereogram referred to a pair of stereo images which could be viewed using a stereoscope.
 
 Most stereoscopic methods present two offset images separately to the left and right eye of the viewer. These two-dimensional images are then combined in the brain to give the perception of 3D depth. This technique is distinguished from 3D displays that display an image in three full dimensions, allowing the observer to increase information about the 3-dimensional objects being displayed by head and eye movements.
 
-http://en.wikipedia.org/wiki/Stereoscopy
+%http://en.wikipedia.org/wiki/Stereoscopy
 
 
 
