Worked on some more theory (far from done)

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -131,3 +131,11 @@
 	year = {2007},
 	howpublished = "\url{http://whatis.techtarget.com/definition/robot-insect-robot-autonomous-robot}"
 }
+
+@MISC{astar,
+	author = {Patrick Lester},
+	title = {A* Pathfinding for Beginners},
+	month = jul,
+	year = {2005},
+	howpublished = "\url{http://www.policyalmanac.org/games/aStarTutorial.htm}"
+}
