--- a/report/sections/ch2-theory_Thomas.tex
+++ b/report/sections/ch2-theory_Thomas.tex
@@ -13,4 +13,43 @@ The individual robot in the insect family is simple, but the whole robot fleet c
 
 
 
-\section{Path finding}
+\section{Path finding and mapping}
+
+Pathfinding is done by a computer, where it uses plotting to find the shortest path between two different points. It can be viewed as a more efficient way of navigating a maze.
+There exists pathfinding algorithms that are used for software simulations, but also for mobile robot navigation. 
+
+A common pathfinding algorithm is A* (A star) and its extended version D*.
+%Needs some more transitioning information
+
+The A* algorithm is most commonly used in video games. The algorithm determines that cost of steps per movement(\textbf{G}) in relation to the estimated cost  of steps towards its destination (\textbf{H}). Possible paths surrounding the current position are analysed and the path with the lowest sum(\textbf{F}) of the step cost and the estimated step cost is the chosen path.\cite{astar}
+%maybe add one of the block images from (good source on A*) http://www.policyalmanac.org/games/aStarTutorial.htm
+%Intro to A* http://www.raywenderlich.com/4946/introduction-to-a-pathfinding
+%Possible more A* information http://heyes-jones.com/astar.php
+%Robots using A*? http://www.pdx.edu/computer-science/sites/www.pdx.edu.computer-science/files/TR%2012-02.pdf
+%Robots using A* for navigation? http://ais.informatik.uni-freiburg.de/publications/papers/thesis_bennewitz.pdf
+
+
+D*, the extended version of A*
+%Information regarding D*
+%http://www.frc.ri.cmu.edu/~axs/dynamic_plan.html
+%http://www.frc.ri.cmu.edu/~axs/doc/icra94.pdf
+%http://idm-lab.org/project-a.html
+
+
+Line tracking
+%http://www.ikalogic.com/line-tracking-sensors-and-algorithms/
+
+Motion and sound
+%http://www.seas.upenn.edu/sunfest/docs/slides/HuangLouie05.pdf
+%http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field
+%http://5drobotics.com/
+%http://www.kuka-labs.com/en/service_robotics/mobile_robotics/autonomous_navigation/
+
+%Advanced imagery stufferino
+%http://ilab.usc.edu/publications/doc/Siagian_etal13icra.pdf
+
+%Misc
+%http://www.doc.ic.ac.uk/~nd/surprise_97/journal/vol4/jmd/
+%http://www.doc.ic.ac.uk/~nd/surprise_97/journal/vol1/jmd/
+
+
