(Not spellchecked) More pathfinding and images

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -139,3 +139,27 @@
 	year = {2005},
 	howpublished = "\url{http://www.policyalmanac.org/games/aStarTutorial.htm}"
 }
+
+@MISC{rangesens,
+	author = {5D Robotics},
+	title = {Mapping + Localization},
+	month = jun,
+	year = {2012},
+	howpublished = "\url{https://vimeo.com/44059341}"
+}
+
+@MISC{rangesensarc,
+	author = {Graham Templeton},
+	title = {Pathfinding is the key to putting robot pack mules in the field},
+	month = jun,
+	year = {2013},
+	howpublished = "\url{http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field}"
+}
+
+@MISC{lasersonar,
+	author = {Louie Huang},
+	title = {Path Finding Mobile Robotics},
+	month = jan,
+	year = {2015},
+	howpublished = "\url{http://www.seas.upenn.edu/sunfest/docs/slides/HuangLouie05.pdf}"
+}
