--- a/report/sections/ch2-theory_Thomas.tex
+++ b/report/sections/ch2-theory_Thomas.tex
@@ -12,7 +12,7 @@ The advantage of having a single computer autonomous robot is that the tasks it 
 The individual robot in the insect family is simple, but the whole robot fleet can be advanced and possibly perform sophisticated tasks, that a require multiple simpler robots.\cite{singleandinsect}
 
 
-
+\clearpage
 \section{Path finding and mapping}
 
 Pathfinding is done by a computer, where it uses plotting to find the shortest path between two different points. It can be viewed as a more efficient way of navigating a maze.
@@ -21,7 +21,17 @@ There exists pathfinding algorithms that are used for software simulations, but 
 A common pathfinding algorithm is A* (A star) and its extended version D*.
 %Needs some more transitioning information
 
-The A* algorithm is most commonly used in video games. The algorithm determines that cost of steps per movement(\textbf{G}) in relation to the estimated cost  of steps towards its destination (\textbf{H}). Possible paths surrounding the current position are analysed and the path with the lowest sum(\textbf{F}) of the step cost and the estimated step cost is the chosen path.\cite{astar}
+\begin{figure}[H]
+\centering
+\includegraphics[width=.7\linewidth]{images/aStar2.jpg}
+\caption{Upper-left number is F, Lower-left G and Lower-right H}
+\label{fig:sub2}
+\end{figure}
+
+The A* algorithm is most commonly used in video games. The algorithm determines that cost of movement from the start to the given generated destination(G), in relation to the estimated cost of movement to its final destination(H). Based on the current destination the possible surrounding paths are analysed and the path with the F value(F = G + H)becomes the chosen path.\cite{astar}
+
+
+
 %maybe add one of the block images from (good source on A*) http://www.policyalmanac.org/games/aStarTutorial.htm
 %Intro to A* http://www.raywenderlich.com/4946/introduction-to-a-pathfinding
 %Possible more A* information http://heyes-jones.com/astar.php
@@ -29,20 +39,27 @@ The A* algorithm is most commonly used in video games. The algorithm determines 
 %Robots using A* for navigation? http://ais.informatik.uni-freiburg.de/publications/papers/thesis_bennewitz.pdf
 
 
-D*, the extended version of A*
+%D*, the extended version of A*
 %Information regarding D*
 %http://www.frc.ri.cmu.edu/~axs/dynamic_plan.html
 %http://www.frc.ri.cmu.edu/~axs/doc/icra94.pdf
 %http://idm-lab.org/project-a.html
 
 
-Line tracking
-%http://www.ikalogic.com/line-tracking-sensors-and-algorithms/
+Simple autonomous robots navigate by the use of infrared LEDs or by the use of photo-resistors and LEDS, by following lines drawn on a surface.\\
+Some autonomous robots and vehicles use multiples of different range sensors and other sensory equipment, to map and locate themselves in indoor and outdoor environments. The map that is generated can be used to keep track of static items in the environment such as structures and difference in terrain, but the map also distinguishes non-static items such as humans and other moving objects. Since the maps are created by the vehicle itself whilst exploring, this technology can be used with or without GPS\cite{rangesens}\cite{rangesensarc}. 
 
-Motion and sound
-%http://www.seas.upenn.edu/sunfest/docs/slides/HuangLouie05.pdf
-%http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field
-%http://5drobotics.com/
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.7]{images/laserrangemap.jpg}
+	\caption{Laser range map}
+	\label{fig:laserrangemap}
+\end{figure}
+%http://www.jaychakravarty.com/?p=75
+
+Laser range finders and sonar arrays are used to navigate and determine the shortest possible path to a given destination. The sensor equipment is used to give the autonomous robot a sense of distance towards objects in an environment, giving it vital data regarding optimal travel directions.\cite{lasersonar}
+
+
 %http://www.kuka-labs.com/en/service_robotics/mobile_robotics/autonomous_navigation/
 
 %Advanced imagery stufferino
