--- a/report/sections/ch2-theory_Thomas.tex
+++ b/report/sections/ch2-theory_Thomas.tex
@@ -47,6 +47,7 @@ The A* algorithm is most commonly used in video games. The algorithm determines 
 
 
 Simple autonomous robots navigate by the use of infrared LEDs or by the use of photo-resistors and LEDS, by following lines drawn on a surface.\\
+%http://www.ikalogic.com/line-tracking-sensors-and-algorithms/ <-- for the line tracking 
 Some autonomous robots and vehicles use multiples of different range sensors and other sensory equipment, to map and locate themselves in indoor and outdoor environments. The map that is generated can be used to keep track of static items in the environment such as structures and difference in terrain, but the map also distinguishes non-static items such as humans and other moving objects. Since the maps are created by the vehicle itself whilst exploring, this technology can be used with or without GPS\cite{rangesens}\cite{rangesensarc}. 
 
 \begin{figure}[H]
