--- a/report/sections/research_Gustavo.tex
+++ b/report/sections/research_Gustavo.tex
@@ -19,21 +19,30 @@
 %    drones
 %    Tracks/wheels
 %        tracks are heavier than wheels, but better for rough terrain
-
+\section Environment
 \subsection Resources
 For the purpose of exploration and resource gathering, planets can be split into two categories. The gassy giants, and the earthlike/rocky planets[ref?].
-There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colosize such a planet, or build anything on it for that matter. However, they(solar system) have a relatively high helium content, which is a valuable gas for research[ref?]. 
-In the other hand, earthlike planets have a larger variety of resources, and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface.
+There is very little reason to explore a gassy giant, as they smoothly transition between gas, lquid, and solid the deeper you look[citation needed]. This means that it is extremely difficult to colonize such a planet, or build anything on it for that matter. However, they(solar system) have a relatively high helium content[citation], which is a valuable gas for research[ref?]. 
+In the other hand, earthlike planets have a larger variety of resources[citation], and it is easier to build on them. These planets are often composed largely of metals and silicon[citation needed], which is what gives them their rocky and sandy surface[citation].
 
 
 \subsection{Environment}
 \subsubsection{Atmosphere}
-There are quite a few planets with a negligible atmosphere. In these planets sound based sensors cannot work, but light based sensors might even work better.
+There are quite a few planets with a negligible atmosphere[citation]. In these planets sound based sensors cannot work[citation], but light based sensors might even work better[citation].
 Planets with an atmosphere can be much harder to cope with. The biggest aspect of a planets atmosphere is the pressure at surface level.
 
 \subsubsection{Terrain}
-Earthlike planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.
+Earthlike planets don't have a very big variation in terrain, as most of them do not have any liquid substances that could change the terrain.(maybe remove this line, in general, planets without liquids are very similar)
 
 
-\subsection{Conclusion}
+\section{Equipment}
 
+\section{Sensors}
+\subsection{Image Based}
+(I'm not sure I should have this here)
+\subsection{Light Based}
+Light based sensors are used to measure distance. They work by emiting a pulse of light, then waiting for it to reflect back into a camera[citation needed]. They count how long it takes for the light to bounce back, and calculate the distance as {c*t/2}[citation]. They are slightly affected by the density of the medium they travel in, as light travels slower through a denser medium[citaion], however, in an atmosphere, this effect is nearly negligible[citation] (research about venus. how fast does light move there?)
+\subsection{Sound Based}
+Sound based sensors work in a similar manner to light based sensors. They measure the time it takes for sound to bounce back to it and calculate the distance as {v*t/2}[citation]. These sensors are affected much more by the density of the medium, as sound travels faster in a denser medium[citation]. (how does the speed of sound depend on the density of the medium?)
+\subsection{Pressure Based}
+Pressure based sensors work by simply measuring how much pressure there is in a point in space. This can be used to measure the vertical distance between two points in a planet with an atmosphere[citation].
